# em_methods

./: .gitignore  CITATION.cff  LICENCE  MANIFEST.in  README.md  pyproject.toml  report.json  setup.cfg  setup.py
PWEM/: pwem.py
em_methods/: __init__.py  grid.py  logging.ini  pwem.py  rcwa.py  s_matrix.py  slab_waveguide.py  smatrix.py  utilities.py
em_methods/color_algo/: __init__.py  color_scripts.py  colour_system.py  fdtd_interaction.py
em_methods/cristina/: Module 1_Solar time, angles and Theoretical irradiance calculations.py  Module 4.3_H2 production + energy exchanges throughout a year, constant EC supply (1).py
em_methods/data/: solar_data.csv  solar_data_am0.csv
em_methods/fdtd/: __init__.py  charge.py  fdtd.py
em_methods/formulas/: __init__.py  physiscs.py
em_methods/fuels/: fuel_derivatives.py  fuel_derivatives_og.py  h2_prod_week_const_ec.py  h2_prod_week_var_ec.py  h2_prod_year_const_ec.py  h2_prod_year_var_ec.py  h2_production_week_const_ec.py  lcoh.py  lcoh_og.py  module1_theoretical_irradiance.py  module2_irradiance_from_tmy.py  module3_pv_power_generation.py  module4.1_h2_prod_week_s1.py  module4.1_h2_prod_week_s2.py  module4.1_h2_prod_year_s1.py  module4.1_h2_prod_year_s2.py  module4.2_h2_prod_week_s2.py  module4.3_h2_prod_year_s1.py  module4.4_h2_prod_year_s2.py  module5_fuel_derivatives.py  module6_lcoh.py
em_methods/lumerical/: Untitled-1.py  __init__.py  charge.py  fdtd.py  lum_helper.py
em_methods/optics/: __init__.py  optics.py
em_methods/optimization/: pso.py
em_methods/optimization/ui/: pso_gui.py  pso_gui.ui  pso_gui_main.py
em_methods/pv/: __init__.py  diode.py  solar_power_angle.py  solar_power_angle_og.py  tmy_irradiance_og.py  tmy_irradiance_week_og.py
em_methods/rcwa_core/: py_rcwa_core.cpp  py_rcwa_core.pyx  rcwa_core.py
em_methods/smm_core/: py_smm_base.cp311-win_amd64.pyd  py_smm_base.cp312-win_amd64.pyd  py_smm_base.cp39-win_amd64.pyd  py_smm_base.cpp  py_smm_base.pyx  smm_base.cpp
test/: diode_profile  fdtd_performance.py  rcwa_convergence.py  test_charge.py  test_color_algo.py  test_fdtd.py  test_fuel.py  test_global.py  test_pso.py  test_pso_gui.py  test_pv.py  test_rcwa.py  test_solar_power_angle.py
test/color_algo/: R_CrossGratings_green.txt
test/pv/: iv_perovskite.txt  iv_perovskite_bad.txt
wheelhouse/: em_methods-0.1-cp310-cp310-win32.whl  em_methods-0.1-cp310-cp310-win_amd64.whl  em_methods-0.1-cp311-cp311-win32.whl  em_methods-0.1-cp311-cp311-win_amd64.whl  em_methods-0.1-cp312-cp312-win32.whl  em_methods-0.1-cp312-cp312-win_amd64.whl  em_methods-0.1-cp313-cp313-win32.whl  em_methods-0.1-cp313-cp313-win_amd64.whl  em_methods-0.1-cp39-cp39-win32.whl  em_methods-0.1-cp39-cp39-win_amd64.whl  em_methods-0.2-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  em_methods-0.2-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  em_methods-0.2-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  em_methods-0.2-cp313-cp313-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  em_methods-0.2-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  em_methods-0.5-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  em_methods-0.5-cp310-cp310-win32.whl  em_methods-0.5-cp310-cp310-win_amd64.whl  em_methods-0.5-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  em_methods-0.5-cp311-cp311-win32.whl  em_methods-0.5-cp311-cp311-win_amd64.whl  em_methods-0.5-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  em_methods-0.5-cp312-cp312-win32.whl  em_methods-0.5-cp312-cp312-win_amd64.whl  em_methods-0.5-cp313-cp313-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  em_methods-0.5-cp313-cp313-win32.whl  em_methods-0.5-cp313-cp313-win_amd64.whl  em_methods-0.5-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  em_methods-0.5-cp39-cp39-win32.whl  em_methods-0.5-cp39-cp39-win_amd64.whl
