[build-system]
requires=["setuptools", "cython", "wheel"]
build-backend="setuptools.build_meta"

[project]
name="em_methods"
version="0.05"
description="Library with useful tools for modelling of solar cells"
keywords=["EM","PWEM","SMM","TMM","RCWA"]
license={text="GPL3"}
requires-python = ">=3.9"
dependencies=[
    "numpy>=1.2",
    "scipy",
    "matplotlib",
    "pandas"
]

[tool.setuptools.packages.find]
exclude=["test", "em_methods.fuels"]

[tool.setuptools]
package-dir={"" = "."}
ext-modules=[
    {name="em_methods.smm_core.py_smm_base", sources=["em_methods/smm_core/py_smm_base.pyx","em_methods/smm_core/smm_base.cpp"]}
]

[tool.Extension]
include-dirs=["em_methods/smm_core"]
undef-macros=["NDEBUG"]

[tool.setuptools.package-data]
"em_methods"=["data/*","*.ini"]

[tool.setuptools.exclude-package-data]
"em_methods"=["*test*", "fuels/*"]

[tool.cython]
language_level="3"

[tool.cibuildwheel]
skip = ["pp*_*", "*musllinux*", "*i686"]
# output-dir = "dist"

