[metadata]
name = em_methods
author = "Miguel Alexandre"
author_email = "m.alexandre@campus.fct.unl.pt"
version = 0.0.2
description = "Library with severall EM solvers (SMM, PWEM, RCWA)"
keywords = EM, PWEM, SMM, TMM, RCWA
licence = GPL3

[options]
packages = find_namespace:
include_package_data = True
install_requires =
    numpy >= 1.2
setup_requires =
    cython
    numpy
    scipy

[options.packages.find]
exclude = test*, em_methods.Tests
include = *.pyx, *.h
