[metadata]
name = em_methods
author = "Miguel Alexandre"
author_email = "m.alexandre@campus.fct.unl.pt"
version = 0.0.5
description = "Library with several EM solvers (SMM, PWEM, RCWA)"
keywords = EM, PWEM, SMM, TMM, RCWA
licence = GPL3

[options]
packages = find:
include_package_data = True
install_requires =
    numpy >= 1.2
setup_requires =
    cython
    numpy
    scipy
    PyAstronomy

[options.package_data]
* = *.pyx, *.ini
data =
    *.txt
    *.csv
